@@ -79,7 +79,7 @@ public class DamageListener implements Listener {
         LivingEntity damager = (LivingEntity) e.getDamager();
         DamageModificationConfig strengthModifier = modifiers.get(DamageModificationConfig.Type.STRENGTH_EFFECT);
         if (strengthModifier != null) {
-            PotionEffect strengthEffect = damager.getPotionEffect(PotionEffectType.INCREASE_DAMAGE);
+            PotionEffect strengthEffect = damager.getPotionEffect(PotionEffectType.STRENGTH);
             if (strengthEffect != null) {
                 double damage = strengthModifier.modify(e.getDamage(), strengthEffect.getAmplifier() + 1);
                 e.setDamage(damage);
@@ -97,7 +97,7 @@ public class DamageListener implements Listener {
                 double damage = swordModifier.modify(e.getDamage());
                 e.setDamage(damage);
             }
-            int sharpnessLevel = is.getEnchantmentLevel(Enchantment.DAMAGE_ALL);
+            int sharpnessLevel = is.getEnchantmentLevel(Enchantment.SHARPNESS);
             DamageModificationConfig sharpnessModifier = modifiers.get(DamageModificationConfig.Type.SHARPNESS_ENCHANT);
             if (sharpnessLevel != 0 && sharpnessModifier != null) {
                 double damage = sharpnessModifier.modify(e.getDamage(), sharpnessLevel);
@@ -138,11 +138,11 @@ public class DamageListener implements Listener {
         }
         Arrow arrow = (Arrow) e.getDamager();
         List<MetadataValue> values = arrow.getMetadata(powerMetaDataKey);
-        if (values == null || values.size() == 0) {
+        if (values.isEmpty()) {
             return;
         }
 
-        int powerLevel = values.get(0).asInt();
+        int powerLevel = values.getFirst().asInt();
         double damage = powerModifier.modify(e.getDamage(), powerLevel);
 
         if (arrow.getShooter() instanceof Player && e.getEntity() instanceof Player) {
@@ -175,7 +175,7 @@ public class DamageListener implements Listener {
             }
             Arrow arrow = (Arrow) e.getEntity();
             arrow.setMetadata(powerMetaDataKey,
-                new FixedMetadataValue(Finale.getPlugin(), bow.getEnchantmentLevel(Enchantment.ARROW_DAMAGE)));
+                new FixedMetadataValue(Finale.getPlugin(), bow.getEnchantmentLevel(Enchantment.POWER)));
         } else if (e.getEntityType() == EntityType.TRIDENT) {
             Trident trident = (Trident) e.getEntity();
             ItemStack tridentItem = trident.getItem();
